@@ -1,3 +1,8 @@
+Sat Aug 20 01:43:43 1994  Theodore Y. Ts'o  (tytso at tsx-11)
+
+	* mk_req_ext.c (krb5_generate_authenticator): Fix pointer aliasing
+	problem between newkey and authent->subkey.
+
 Wed Aug 17 17:58:22 1994  Theodore Y. Ts'o  (tytso at tsx-11)
 
 	* encode_kdc.c (krb5_encode_kdc_rep): Pass in to
